<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical"
    app:cardElevation="7dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        app:cardCornerRadius="16dp"
        android:elevation="8dp"
        app:cardBackgroundColor="@color/purple_200"
        app:cardUseCompatPadding="true"
        app:cardMaxElevation="1dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="@dimen/cardev">


            <TextView
                android:id="@+id/stattit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="15dp"
                android:text="@string/sta"
                android:textSize="@dimen/rectitle"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/statsubtit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/stattit"
                android:text=":"
                android:textSize="@dimen/rectitle"
                android:textStyle="" />



            <TextView
                android:id="@+id/distit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="@dimen/cartop"
                android:text="@string/dist"
                android:layout_below="@+id/stattit"
                android:textSize="@dimen/rectitle"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/disubtit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/distit"
                android:text=""
                android:layout_marginTop="@dimen/cartop"
                android:layout_marginLeft="@dimen/cartop"
                android:layout_below="@+id/stattit"

                android:textSize="@dimen/rectitle"
                android:textStyle="" />



            <TextView
                android:id="@+id/mkttit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:text="@string/mkt"
                android:layout_below="@+id/distit"
                android:textSize="@dimen/rectitle"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/cartop" />


            <TextView
                android:id="@+id/mktsubtit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/distit"
                android:layout_marginLeft="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:layout_toRightOf="@+id/mkttit"
                android:text=":"
                android:textSize="@dimen/rectitle"
                android:textStyle="" />


            <TextView
                android:id="@+id/comdtit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:text="@string/comty"
                android:layout_below="@+id/mkttit"
                android:textSize="@dimen/rectitle"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/cartop" />


            <TextView
                android:id="@+id/comdsubtit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mkttit"
                android:layout_marginLeft="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:layout_toRightOf="@+id/comdtit"
                android:text=":"
                android:textSize="@dimen/rectitle"
                android:textStyle="" />

            <TextView
                android:id="@+id/varitlt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:text="@string/vrty"
                android:layout_below="@+id/comdtit"
                android:textSize="@dimen/rectitle"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/cartop" />


            <TextView
                android:id="@+id/varsubtit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/comdtit"
                android:layout_marginLeft="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:layout_toRightOf="@+id/comdtit"
                android:text=":"
                android:textSize="@dimen/rectitle"
                android:textStyle="" />
            <TextView
                android:id="@+id/arivdttile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:text="@string/arr_date"
                android:layout_below="@+id/varitlt"
                android:textSize="@dimen/rectitle"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/cartop" />


            <TextView
                android:id="@+id/arivdtsubtile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/varitlt"
                android:layout_marginLeft="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:layout_toRightOf="@+id/comdtit"
                android:text=":"
                android:textSize="@dimen/rectitle"
                android:textStyle="" />


            <TextView
                android:id="@+id/minprctitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:text="@string/minpr"
                android:layout_below="@+id/arivdttile"
                android:textSize="@dimen/rectitle"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/cartop" />


            <TextView
                android:id="@+id/minpricesub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/arivdttile"
                android:layout_marginLeft="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:layout_toRightOf="@+id/comdtit"
                android:text=":"
                android:textSize="@dimen/rectitle"
                android:textStyle="" />

            <TextView
                android:id="@+id/maxprctitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/cartop"

                android:layout_marginTop="@dimen/cartop"
                android:text="@string/maxpr"
                android:layout_below="@+id/minprctitle"
                android:textSize="@dimen/rectitle"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/cartop" />


            <TextView
                android:id="@+id/maxpricesub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/minprctitle"
                android:layout_marginLeft="@dimen/cartop"
                android:layout_marginTop="@dimen/cartop"
                android:layout_toRightOf="@+id/comdtit"
                android:text=":"
                android:textSize="@dimen/rectitle"
                android:textStyle="" />

            <TextView
                android:id="@+id/modelprctitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maxprctitle"
                android:layout_marginStart="@dimen/cartop"
                android:layout_marginLeft="@dimen/cartop"
                android:layout_marginTop="@dimen/cartop"
                android:text="@string/mdlprc"
                android:textSize="@dimen/rectitle"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/mdlpricesub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maxprctitle"
                android:layout_marginLeft="@dimen/cartop"
                android:layout_marginTop="@dimen/cartop"
                android:layout_toRightOf="@+id/modelprctitle"
                android:text=":"
                android:textSize="@dimen/rectitle"
                android:textStyle="" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>